--- a/ckanext/open_alberta/sass/ab-opengov.scss
+++ b/ckanext/open_alberta/sass/ab-opengov.scss
@@ -1403,7 +1403,7 @@ blockquote {
     font-size: 14px;
     margin-bottom: 12px;
     padding-bottom: 6px;
-    border-bottom: 6px solid #f39b30;
+    border-bottom: 6px solid #77b800;
     text-transform: uppercase;
     color: #58595b;
     font-weight: 700;   
